--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding: 0;
     min-height: 100vh;
     width: 100%;
     /* background-color: blanchedalmond; */
-    background-image: url('./assets/img/restaurant-interior.jpg');
+    background-image: url('./assets/img/restaurant-interior2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
     background-attachment: fixed;
+    background-size: 100% 100%;
     display: grid;
 }
 
@@ -280,6 +280,7 @@ footer{
 }
 
 @media (max-width: 700px){
+
     .logo h1,.logo h2{
         font-size: 2em;
         
