--- a/src/app/components/buscador/buscador.component.html
+++ b/src/app/components/buscador/buscador.component.html
@@ -22,6 +22,7 @@
         </mat-form-field>
 
         <button type="submit" mat-raised-button class="search-btn" (click)="onSubmit()">Buscar</button>
+        <button type="submit" mat-raised-button class="search-btn" (click)="limpiarBusqueda()">Limpiar</button>
     </mat-card-content>
 </mat-card>
 
