--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -2,6 +2,6 @@
     <app-header></app-header>
     <app-detail></app-detail>
     <footer>
-        Challenge Alkemy-Angular &copy;Maximiliano Guaymas
+        2022 &copy;Maximiliano Guaymas
     </footer>
 </div>
