--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -11,6 +11,6 @@
     </section>
     
     <footer>
-        Challenge Alkemy-Angular &copy;Maximiliano Guaymas
+        2022 &copy;Maximiliano Guaymas
     </footer>
 </div>
