--- a/src/app/components/platos/platos.component.html
+++ b/src/app/components/platos/platos.component.html
@@ -1,6 +1,17 @@
 <div class="carta">
-    <section class="menu" *ngFor="let menu of menus;let i = index">
-        <h3>Menu {{i + 1}}</h3>
+    <section class="menu no_menu" *ngFor="let menu of menus;let i = index"
+     [ngClass]="{'menu1' : i == 0 && expand[i],
+     'menu2' : i == 1 && expand[i],
+     'menu3' : i == 2 && expand[i],
+     'menu4' : i == 3 && expand[i],
+     'no_menu1' : i == 0 && !expand[i],
+     'no_menu2' : i == 1 && !expand[i],
+     'no_menu3' : i == 2 && !expand[i],
+     'no_menu4' : i == 3 && !expand[i]
+     }">
+        <h3>MENU {{i + 1}}</h3>
+        <mat-icon class="icon" *ngIf="!expand[i]" (click)="changeExpand(i)">expand_more</mat-icon>
+        <mat-icon class="icon" *ngIf="expand[i]" (click)="changeExpand(i)">expand_less</mat-icon>
         <div class="lista-platos-menu">
            <app-plato *ngFor="let plato of menus[i].platos;let ind = index" [plato]="plato.plato" [i_menu] = "i" [ind_platos] = "ind" [agregar_eliminar]="text" (enviar_plato)="eliminarPlato($event)"></app-plato> 
         </div>
